--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-SECRET_KEY=duwkclsrntkrnlrhtlvdjdydjswpWmaduwkclsrnrktodrlfRkdy
-
-DB_URL=localhost:3306/HooYah
+DB_URL=localhost:3306/yacht_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=1111
+SECRET_KEY=ChangeMe_very_long_secret_2025
