--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_URL=localhost:3306/yacht_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 DB_USERNAME=root
-DB_PASSWORD=1111
+DB_PASSWORD=root
 SECRET_KEY=ChangeMe_very_long_secret_2025
