--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
     properties:
       hibernate:
         show_sql: true
+        jdbc:
+          time_zone: UTC
     hibernate:
       ddl-auto: update
 
