--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_URL=localhost:3306/yacht_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+SECRET_KEY=duwkclsrntkrnlrhtlvdjdydjswpWmaduwkclsrnrktodrlfRkdy
+
+DB_URL=localhost:3306/HooYah
 DB_USERNAME=root
 DB_PASSWORD=root
-SECRET_KEY=ChangeMe_very_long_secret_2025
