--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
     hibernate:
       ddl-auto: update
 
+firebase:
+  credentials: classpath:firebase.json
 
 token:
   SECRET_KEY: ${SECRET_KEY}
